# ROS-robot-simulation

./: .gitignore  README.md
drift/: .ros2_workspace
drift/drift_build/tidybot_robot/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  colcon_command_prefix_build.sh.env  install_manifest.txt  tidybot_robot_node
drift/drift_build/tidybot_robot/.cmake/api/v1/reply/: codemodel-v2-4c17d6223bcd15a8d175.json  directory-.-0a043b9330fca67ef626.json  index-2026-04-08T14-10-13-0675.json  target-tidybot_robot_node-68787f61a6e8388747e9.json  target-tidybot_robot_uninstall-77e150a76ac9bc06f87e.json  target-uninstall-f8e6faf1fc3d2d2c03b7.json
drift/drift_build/tidybot_robot/ament_cmake_core/: package.cmake  tidybot_robotConfig.cmake
drift/drift_build/tidybot_robot/ament_cmake_core/stamps/: package.xml.stamp
drift/drift_build/tidybot_robot/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
drift/drift_build/tidybot_robot/ament_cmake_index/share/ament_index/resource_index/package_run_dependencies/: tidybot_robot
drift/drift_build/tidybot_robot/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
drift/drift_install/: local_setup.sh  setup.sh
drift/drift_install/tidybot_robot/share/tidybot_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
drift/drift_install/tidybot_robot/share/tidybot_robot/config/: tidybot_robot_params.yaml
drift/drift_install/tidybot_robot/share/tidybot_robot/urdf/: tidybot.urdf.xacro
drift/drift_install/tidybot_robot/share/tidybot_robot/worlds/: home.world
drift/log/: latest_build
drift/src/tidybot_robot/: .drift-package.json  CMakeLists.txt
drift/src/tidybot_robot/launch/: tidybot_robot.launch.py
drift/src/tidybot_robot/src/: tidybot_robot_node.cpp
drift/src/tidybot_robot/tidybot_robot/: tidybot_behavior.py
output/20260408_111429/: odom.csv
src/robot/: CMakeLists.txt  package.xml
src/robot/config/: diff_drive_controller.yaml  ekf.yaml  slam_toolbox.yaml
src/robot/launch/: spawn_robot.launch.py
src/robot/models/NormalBed/: model.sdf
src/robot/models/Woodcube10cm/: model.config  model.rsdf  model.sdf
src/robot/scripts/: explorer_node.py  waypoint_node.py
src/robot/urdf/: arms.xacro  car_constants.xacro  controller.xacro  gazebo.xacro  inertial_macros.xacro  robot_chasis.xacro  robot_fin.urdf  robot_model.xacro  sensors.xacro  torso.xacro
src/robot/worlds/: sensor_empty.sdf
